--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -38,8 +38,18 @@ main {
 .benefit-content {
   text-align: justify;
 }
-.card-event {
-  max-width: 65rem;
+#event {
+  background: linear-gradient(to right, #ff8008, #ffc837); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border-radius: 10px;
+}
+
+#event a:hover {
+  transition: all 0.2s ease-out;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+  top: -20px;
+  border: 1px solid #cccccc;
+  background: linear-gradient(to right, #ff8008, #ffc837); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-weight: bold;
 }
 .bioMentor {
   text-align: justify;
@@ -52,7 +62,7 @@ main {
 
 /* Breakpoint */
 @media screen and (max-width: 576px) {
-  /* Banner Page Home */
+  /* Page Home */
   .banner {
     width: 100%;
     height: 100vh;
@@ -61,16 +71,20 @@ main {
     position: absolute;
     z-index: -1;
   }
+  * {
+    overflow-x: hidden;
+  }
   /* Page About */
   .imgAbout {
     width: 75%;
   }
+  /* Footer */
   .igAccount {
-    margin-right: 10px;
-    margin-left: 45px;
+    margin-right: 30px;
+    margin-left: 20px;
   }
   .fbAccount {
-    margin-right: 50px;
+    margin-right: 25px;
   }
 }
 
