--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,7 +14,7 @@ main {
 /* Home Page */
 .banner {
   width: 100%;
-  height: 100vh;
+  max-height: 75vh;
   object-position: center;
   position: absolute;
   z-index: -1;
