--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,7 +14,7 @@ main {
 /* Home Page */
 .banner {
   width: 100%;
-  height: 75vh;
+  height: 500px;
   object-position: center;
   position: absolute;
   z-index: -1;
@@ -26,6 +26,9 @@ main {
 }
 .harga {
   font-size: 11pt;
+}
+.paket {
+  height: 70vh;
 }
 .paket:hover {
   transition: all 0.2s ease-out;
@@ -64,11 +67,14 @@ main {
   /* Page Home */
   .banner {
     width: 100%;
-    height: 75vh;
+    height: 500px;
     object-fit: cover;
     object-position: center;
     position: absolute;
     z-index: -1;
+  }
+  .paket {
+    height: 60vh;
   }
   /* Page About */
   .imgAbout {
