--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,7 @@ main {
 .banner {
   width: 100%;
   height: 500px;
+  object-fit: cover;
   object-position: center;
   position: absolute;
   z-index: -1;
